# Pairing-matrix-r7-d1-h34

./: .gitignore  OVERALL_PLAN.txt  README.md  STEP1_MATH_VERIFICATION_PLAN.txt  pyproject.toml
docs/: BOUCHET_F2_RANK_GROWTH_RUNBOOK.md  C18_BLOCK_DIAGNOSTIC_REVIEW.md  C18_BLOCK_SEMANTIC_TABLE_RUNBOOK.md  C18_EVEN_CLUSTER_RUNBOOK.md  C18_FAST_SCOUT_RUNBOOK.md  C18_SEMANTIC_TABLE_RUNBOOK.md
schemas/: math_gate.schema.json
scripts/bouchet/: assemble_c18_block_semantic_table.sh  assemble_c18_fast_scout.sh  assemble_c18_semantic_table.sh  merge_c18_even_manifest.sh  plan_c18_fast_scout_suite.sh  run_c18_block_semantic_key_chunk.sh  run_c18_even_chunk.sh  run_c18_f2_rank_growth.sh  run_c18_semantic_key_chunk.sh  submit_c18_block_semantic_keys.sbatch  submit_c18_even_array.sbatch  submit_c18_f2_rank_growth.sbatch  submit_c18_fast_scout.sbatch  submit_c18_semantic_keys.sbatch
src/rank7_jk/: __init__.py  all_a_pairing.py  c18_all_a_probe.py  c18_b_mask_probe.py  c18_basis.py  (+26 more)
tests/: test_all_a_pairing.py  test_c18_all_a_probe.py  test_c18_b_mask_probe.py  test_c18_b_mask_table.py  test_c18_basis.py  test_c18_block_probe.py  test_c18_block_semantic_table.py  test_c18_even_worker.py  test_c18_f2_rank_growth.py  test_c18_one_f_table.py  test_c18_one_gamma_table.py  test_c18_semantic_table.py  test_formula_identities.py  test_gamma.py  test_gate_c_residue_transition.py  test_invariants.py  test_modular_formula.py  test_rank5_regression_scaffold.py  test_rank7_jk_fast_semantic_pipeline.py  test_rank_stream.py  test_repro.py  test_residue_functional.py  test_residue_oracle.py
(+3 files in other folders)
