[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rank7-jk"
version = "0.1.0"
description = "Reference and modular Jeffrey-Kirwan pairing code for rank 7 genus 2 experiments"
requires-python = ">=3.10"
dependencies = [
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "jsonschema>=4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
