[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rank7-jk"
version = "0.1.0"
description = "Reference and modular Jeffrey-Kirwan pairing code for rank 7 genus 2 experiments"
requires-python = ">=3.10"
dependencies = [
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "jsonschema>=4",
]
speed = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.scripts]
rank7-c18-even-worker = "rank7_jk.c18_even_worker:main"
rank7-c18-semantic-table = "rank7_jk.c18_semantic_table:main"
rank7-c18-b-mask-probe = "rank7_jk.c18_b_mask_probe:main"
rank7-c18-block-probe = "rank7_jk.c18_block_probe:main"
rank7-c18-f2-rank-growth = "rank7_jk.c18_f2_rank_growth:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
